LAB/Shared/jenkins-sonarqube-vault-nginx/security_groups.tf
resource "aws_security_group" "instance_sg" {
  name_prefix = "instance_sg_devopstools"

  // Regla para permitir tráfico HTTP en el puerto 9090 (gninx)
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  // Regla para permitir tráfico HTTP en el puerto 5000 (Jenkins)
  ingress {
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  // Regla para permitir tráfico en el puerto 9000 (SonarQube)
  ingress {
    from_port   = 9000
    to_port     = 9000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  // Regla para permitir tráfico en el puerto 8200 (Vault)
  ingress {
    from_port   = 8200
    to_port     = 8200
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
